# path-inspector

./: README.md  pyproject.toml
src/path_inspector/: cli.py  core.py  renderers.py  utils.py
tests/: conftest.py  test_core.py  test_integration.py  test_renderers.py
